--- a/static/style.css
+++ b/static/style.css
@@ -197,8 +197,8 @@ button:active {
   text-align: center;
 }
 
-#confidence-bar-container {
-  background-color: #e2e8f0;
+.confidence-bar-container {
+  background-color: .e2e8f0;
   border-radius: 30px;
   overflow: hidden;
   margin: 20px 0;
@@ -206,7 +206,7 @@ button:active {
   box-shadow: inset 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-#confidence-bar {
+.confidence-bar {
   background: linear-gradient(90deg, var(--primary) 0%, #22c55e 100%);
   color: white;
   height: 100%;
@@ -332,6 +332,7 @@ body.dark .swal2-success-line-tip,
 body.dark .swal2-success-line-long {
   stroke: var(--primary-dark) !important;
 }
+
 
 /* Responsive */
 @media (max-width: 768px) {
