--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,7 @@
       </button>
     </div>
 
-    <h1><i class="fas fa-shield-alt"></i> ระบบตรวจจับสลิปปลอม</h1>
+    <h1>ระบบตรวจจับสลิปปลอม</h1>
 
     <!-- Upload Area -->
     <div id="drop-area">
