--- a/templates/index.html
+++ b/templates/index.html
@@ -81,8 +81,27 @@
 
       <!-- Loading Animation -->
       <div id="loading-animation" class="loading-animation">
-        <img src="https://media0.giphy.com/media/v1.Y2lkPTc5MGI3NjExYndpZnR6aGRjdHVybWNvMXo5YnFoMHphYmZiZmJ1OGl5eHhsZzBwNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/pudldDRVsmLJgjKGIr/giphy.gif" alt="กำลังประมวลผล..." />
-        <p>กำลังประมวลผล กรุณารอสักครู่...</p>
+        <div class="robot-container">
+          <div class="robot">
+            <div class="antenna"></div>
+            <div class="head">
+              <div class="eyes">
+                <div class="eye left"></div>
+                <div class="eye right"></div>
+              </div>
+            </div>
+            <div class="body">
+              <div class="scanner-light"></div>
+            </div>
+          </div>
+          <div class="analysis-status">
+            <div class="progress-bar">
+              <div class="progress"></div>
+            </div>
+            <div class="status-text">กำลังวิเคราะห์...</div>
+            <div class="file-counter">0/0 ไฟล์</div>
+          </div>
+        </div>
       </div>
 
       <!-- Result Section -->
